objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <description>The Power of One</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Rule_Test__c</fullName>
        <description>Validation Rule Formula Logic Test</description>
        <formula>CreatedDate &gt; NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Rule Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa_external_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>metazoa_external_id</label>
        <type>Text</type>
    </fields>
</CustomObject>